# Multi-Agent-for-ICD-Prediction

./: .gitignore  README.md  pyproject.toml
EasyR1-main/examples/: icd_f1_grpo.md  icd_f1_grpo.yaml  qwen2_5_1_5b_icd_f1_grpo.sh
EasyR1-main/examples/reward_function/: icd_f1.py
EasyR1-main/scripts/: model_merger.py
multi_agent_icd/: __init__.py  knowledge_base.py  run.py  testset.py
multi_agent_icd/agents/: __init__.py
multi_agent_icd/agents/agent1/: __init__.py  agent.py  prompt.py  schema.py
multi_agent_icd/agents/agent2/: __init__.py  agent.py  prompt.py  schema.py
multi_agent_icd/agents/agent3/: __init__.py  agent.py  prompt.py  schema.py
multi_agent_icd/cli/: __init__.py  prepare_easyr1_dataset.py  run_agent1.py  run_testset.py
multi_agent_icd/datasets/: __init__.py  mimic.py
multi_agent_icd/datasets/mimic4_icd10/: TOP_50_CODES.csv
multi_agent_icd/datasets/mimic4_icd9/: TOP_50_CODES.csv
multi_agent_icd/providers/: __init__.py  local_qwen.py  openai_responses.py
multi_agent_icd/rl/: __init__.py  easyr1.py
multi_agent_icd/utils/: clinical_text.py  schema.py
tests/: test_easyr1_icd_rl.py  test_mimic_dataset.py  test_pipeline.py
