[project]
name = "multi-agent-for-icd-prediction"
version = "0.1.0"
description = "Multi-agent ICD prediction prototype"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pandas>=1.4.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["multi_agent_icd*"]

[tool.setuptools.package-data]
multi_agent_icd = ["datasets/mimic4_icd9/*.csv"]
